# GoLearn

./: .dockerignore  .gitignore  =1.23.0  =2.7.0  DOCKER_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING.md  PDF_IMAGE_EXTRACTION_API.md  agents.md  docker-compose.yml  pyproject.toml  readme.md  sample_image_response.json  test_base64_extraction.py  test_complete_flow.py  test_endpoint_direct.py  test_endpoint_mock.py  test_logging.py  test_pdf_extraction.py
app/: config.py  dependencies.py  main.py
app/routers/: __init__.py  auth.py  chat.py  comprehend_stream.py  dashboard.py  exam.py  feynman.py  notifications.py  quiz.py  study.py  voice.py
app/services/: agent_service.py  auth_service.py  exam_generator_service.py  firebase.py  fsrs.py  notification_service.py  pdf_generator_service.py  pdf_image_service.py  rag_service.py  storage_service.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/firebase-messaging-sw.js/: route.ts
frontend/src/app/quiz/[id]/: page.tsx
frontend/src/app/study/[id]/: page.tsx
frontend/src/app/study/[id]/feynman/: VoiceChatPanel.tsx  page.tsx
frontend/src/components/: ChatBot.tsx  ChatButton.module.css  ChatButton.tsx  ChatPanel.module.css  ChatPanel.tsx  ExamUploadModal.tsx  NotificationManager.tsx  PomodoroTimer.tsx
frontend/src/contexts/: AuthContext.tsx  ExamContext.tsx
frontend/src/lib/: api.ts  firebase.ts
logs/: .gitkeep
scripts/: cron_notifications.py
study_agent/: agent.py  config.py
study_agent/comprehension/: __init__.py  application_agent.py  engagement_agent.py  exploration_agent.py  orchestrator.py  quality_checker.py
study_agent/feynman/: __init__.py  agent.py
study_agent/prompts/: application.txt  engagement.txt  exploration.txt  feynman.txt  testing.txt
study_agent/retention/: __init__.py  feedback_agent.py  leitner_agent.py  orchestrator.py  testing_agent.py
study_agent/tools/: __init__.py  content_tools.py  document_tools.py
